<resources>
    <string name="app_name">Tingle</string>
    <string name="headline">Tingle</string>
    <string name="last_thing">Last thing addded</string>
    <string name="heading_create">Add new thing</string>
    <string name="what_thing">What thing</string>
    <string name="where">Where</string>
    <string name="list_button_text">List of all things</string>
    <string name="search_button_text">Search</string>
    <string name="delete_item">Delete</string>
    <string name="scan_button_text">Scan bar code</string>
    <string name="menu_item_settings">Settings</string>
    <string name="pref_order_category_title">Ordering by</string>
    <string name="pref_order_important_title">Important</string>
    <string name="pref_order_important_summary">Ordering by importance</string>
    <string name="pref_order_old_title">New or old items first</string>
    <string name="pref_order_old_summary"></string>
    <string name="pref_order_old_dialog_title">Order by</string>
    <string name="pref_order_old_default">asc</string>
    <string name="thing_important">Important</string>
    <string name="wifi_connected">Wifi connected!</string>
    <string name="lost_connection">Connection lost!</string>
    <string name="data_management_category_title">Data management</string>

    <string name="connection_type_list_title">Choose connectivity type</string>
    <string name="connection_type_list_summary">Network connectivity required to download</string>
    <string name="connection_type_dialog_title">Download feed</string>
    <string name="pref_connection_type_wifi">WIFI</string>

</resources>
